--- a/headlines.html
+++ b/headlines.html
@@ -4,375 +4,305 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Headline Stream</title>
-
   <style>
     :root{
-      --bg0:#05080a;
-      --bg1:#0a1116;
-      --panel:#0b141aee;
-      --stroke:#1b2a32;
-      --glow:#46f3d0;
-      --text:#eaf2f7;
-      --muted:#a8b9c6;
-      --chip:#0b2022;
-      --chipStroke:#1c3c3a;
-      --danger:#ff6b6b;
+      --bg0:#070b0f;
+      --bg1:#0a1218;
+      --glass: rgba(255,255,255,.06);
+      --glass2: rgba(255,255,255,.09);
+      --line: rgba(255,255,255,.10);
+      --txt: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.62);
+      --accent: #33d1b5;
+      --danger: #ff5b6a;
     }
-
-    html,body{
-      height:100%;
-      margin:0;
-      background: radial-gradient(1200px 700px at 15% 0%, #163642 0%, transparent 60%),
-                  linear-gradient(180deg, var(--bg0), var(--bg1));
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0}
+    body{
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      color:var(--text);
+      color:var(--txt);
+      background:
+        radial-gradient(1200px 700px at 20% 0%, rgba(51,209,181,.22), transparent 50%),
+        radial-gradient(1200px 700px at 90% 10%, rgba(70,140,255,.14), transparent 55%),
+        linear-gradient(180deg, var(--bg0), var(--bg1));
       overflow:hidden;
     }
-
     .wrap{
-      position:relative;
       height:100%;
-      padding:18px 18px 14px 18px;
-      box-sizing:border-box;
-    }
-
-    /* Top bar */
-    .top{
-      height:72px;
-      display:flex;
-      align-items:center;
-      gap:18px;
-      padding:14px 16px;
-      border-radius:18px;
-      background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
-      border:1px solid rgba(255,255,255,0.08);
-      box-shadow: 0 18px 60px rgba(0,0,0,0.55);
-      backdrop-filter: blur(10px);
-    }
-
-    .time{
-      font-size:56px;
-      font-weight:800;
-      letter-spacing:-1.5px;
-      line-height:1;
-      opacity:0.95;
-      text-shadow: 0 12px 30px rgba(0,0,0,0.55);
-      white-space:nowrap;
-    }
-
-    .titleBlock{
+      padding:18px;
       display:flex;
       flex-direction:column;
-      gap:6px;
-      min-width:0;
+      gap:14px;
     }
-
-    .headlineStream{
-      font-size:22px;
-      letter-spacing:0.18em;
-      opacity:0.8;
-    }
-    .subline{
-      font-size:18px;
-      color:var(--muted);
-      opacity:0.9;
-    }
-
-    .status{
-      margin-left:auto;
+    .topbar{
+      border-radius:28px;
+      padding:18px 22px;
+      background: linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.04));
+      border:1px solid var(--line);
+      box-shadow: 0 12px 40px rgba(0,0,0,.35);
       display:flex;
-      align-items:center;
-      gap:10px;
-      font-size:14px;
-      color:var(--muted);
-      opacity:0.9;
+      align-items:flex-end;
+      justify-content:space-between;
+      gap:16px;
+    }
+    .time{
+      font-size:64px;
+      line-height:1;
+      letter-spacing:.5px;
+      font-weight:800;
       white-space:nowrap;
     }
-
-    .dot{
-      width:9px;height:9px;border-radius:50%;
-      background:var(--glow);
-      box-shadow: 0 0 0 4px rgba(70,243,208,0.12), 0 0 18px rgba(70,243,208,0.45);
+    .titleBlock{display:flex;flex-direction:column;gap:4px}
+    .h1{
+      font-size:22px;
+      letter-spacing:.18em;
+      text-transform:uppercase;
+      opacity:.9;
     }
-
-    /* Main card */
-    .card{
-      margin-top:14px;
-      height:calc(100% - 72px - 14px);
-      border-radius:22px;
-      background:
-        radial-gradient(900px 500px at 80% 20%, rgba(70,243,208,0.12), transparent 60%),
-        linear-gradient(180deg, rgba(255,255,255,0.05), rgba(255,255,255,0.02));
-      border:1px solid rgba(255,255,255,0.08);
-      box-shadow: 0 18px 70px rgba(0,0,0,0.6);
-      overflow:hidden;
+    .h2{
+      font-size:18px;
+      color:var(--muted);
+    }
+    .panel{
+      flex:1;
+      border-radius:28px;
+      background: linear-gradient(180deg, rgba(255,255,255,.07), rgba(255,255,255,.03));
+      border:1px solid var(--line);
+      box-shadow: 0 12px 50px rgba(0,0,0,.38);
       position:relative;
-      backdrop-filter: blur(10px);
+      overflow:hidden;
     }
-
-    .card::before{
+    .panel::before{
       content:"";
       position:absolute; inset:0;
       background:
-        repeating-linear-gradient(135deg, rgba(255,255,255,0.04) 0, rgba(255,255,255,0.04) 2px, transparent 2px, transparent 12px);
-      opacity:0.35;
+        radial-gradient(900px 500px at 30% 0%, rgba(51,209,181,.14), transparent 55%),
+        radial-gradient(900px 500px at 90% 20%, rgba(255,255,255,.06), transparent 60%),
+        repeating-linear-gradient(135deg, rgba(255,255,255,.06), rgba(255,255,255,.06) 2px, transparent 2px, transparent 12px);
+      opacity:.25;
       pointer-events:none;
-      mix-blend-mode: overlay;
     }
-
-    .inner{
-      position:relative;
-      height:100%;
-      padding:22px 22px 18px 22px;
-      box-sizing:border-box;
+    .content{
+      position:absolute; inset:0;
+      padding:26px 28px;
       display:flex;
       flex-direction:column;
-      gap:16px;
+      gap:14px;
     }
-
-    .row{
+    .metaRow{
       display:flex;
       align-items:center;
       gap:14px;
-      min-width:0;
+      z-index:2;
     }
-
-    .chip{
+    .pill{
       display:inline-flex;
       align-items:center;
-      gap:10px;
+      gap:8px;
       padding:10px 14px;
       border-radius:999px;
-      background: linear-gradient(180deg, rgba(70,243,208,0.12), rgba(70,243,208,0.05));
-      border:1px solid rgba(70,243,208,0.25);
-      font-weight:700;
-      letter-spacing:0.12em;
-      color:#dffcf6;
+      background: rgba(51,209,181,.10);
+      border:1px solid rgba(51,209,181,.35);
+      font-weight:800;
+      letter-spacing:.12em;
       text-transform:uppercase;
-      flex:0 0 auto;
+      color: rgba(255,255,255,.88);
     }
-
-    .meta{
-      color:var(--muted);
-      font-size:20px;
-      font-weight:600;
-      min-width:0;
+    .src{
+      font-size:22px;
+      font-weight:700;
+      color: var(--muted);
+      max-width:60vw;
       overflow:hidden;
       text-overflow:ellipsis;
       white-space:nowrap;
+      z-index:2;
     }
-
-    .bigTitle{
+    .headline{
       font-size:64px;
-      line-height:1.02;
+      line-height:1.05;
       font-weight:900;
-      letter-spacing:-1.3px;
-      margin-top:4px;
-      text-shadow: 0 18px 60px rgba(0,0,0,0.55);
-      max-height: 2.3em;
-      overflow:hidden;
+      letter-spacing:-.02em;
+      z-index:2;
+      text-wrap:balance;
     }
-
-    .summary{
-      font-size:28px;
-      color:#d6e3ec;
-      opacity:0.95;
-      max-width: 1200px;
+    .sub{
+      font-size:26px;
+      color: var(--muted);
+      z-index:2;
     }
-
     .footer{
-      margin-top:auto;
+      position:absolute;
+      left:22px; bottom:16px;
+      right:22px;
       display:flex;
-      align-items:center;
-      gap:14px;
-      color:var(--muted);
-      font-size:14px;
-      opacity:0.9;
+      justify-content:space-between;
+      color: rgba(255,255,255,.45);
+      font-size:13px;
+      z-index:2;
     }
-
-    .pill{
-      padding:8px 12px;
-      border-radius:999px;
-      background: rgba(0,0,0,0.25);
-      border:1px solid rgba(255,255,255,0.10);
-      display:inline-flex;
-      align-items:center;
-      gap:10px;
-      white-space:nowrap;
-    }
-
-    .btn{
-      cursor:pointer;
-      user-select:none;
-      padding:8px 12px;
-      border-radius:12px;
-      background: rgba(0,0,0,0.25);
-      border:1px solid rgba(255,255,255,0.12);
-      color:var(--text);
-      font-weight:700;
-    }
-    .btn:active{ transform: translateY(1px); }
-
-    .err{
+    .errorLine{
       color: var(--danger);
-      font-weight:700;
+      font-weight:800;
     }
-
-    a{ color:inherit; text-decoration:none; }
-    a:hover{ text-decoration: underline; }
+    a{color:inherit}
   </style>
 </head>
-
 <body>
   <div class="wrap">
-    <div class="top">
-      <div class="time" id="clock">--:--</div>
+    <div class="topbar">
+      <div class="time" id="time">--:--</div>
       <div class="titleBlock">
-        <div class="headlineStream">HEADLINE STREAM</div>
-        <div class="subline">Markets • Tech • AZ • NFL • World • Editing • Gaming</div>
-      </div>
-      <div class="status">
-        <span id="updated">Updating…</span>
-        <span class="dot"></span>
+        <div class="h1">HEADLINE STREAM</div>
+        <div class="h2">Markets • Tech • AZ • NFL • World • Editing • Gaming</div>
       </div>
     </div>
 
-    <div class="card">
-      <div class="inner">
-        <div class="row">
-          <div class="chip" id="chip">LOADING</div>
-          <div class="meta" id="meta">—</div>
+    <div class="panel">
+      <div class="content">
+        <div class="metaRow">
+          <div class="pill" id="tag">Loading</div>
+          <div class="src" id="src">—</div>
         </div>
-
-        <div class="bigTitle" id="title">Fetching headlines…</div>
-        <div class="summary" id="summary">Please wait.</div>
-
-        <div class="footer">
-          <div class="pill" id="sourcePill">Source: —</div>
-          <div class="pill" id="idxPill">Item — / —</div>
-          <div class="pill">Auto: <span id="autoPill">90s</span></div>
-
-          <div style="margin-left:auto; display:flex; gap:10px;">
-            <div class="btn" id="prevBtn">◀</div>
-            <div class="btn" id="nextBtn">▶</div>
-            <div class="btn" id="openBtn">Open</div>
-          </div>
-        </div>
+        <div class="headline" id="headline">Fetching headlines…</div>
+        <div class="sub" id="summary">Option 3 (no AI summaries). Rotates every 90 seconds.</div>
+      </div>
+      <div class="footer">
+        <div id="statusLeft">—</div>
+        <div id="statusRight">—</div>
       </div>
     </div>
   </div>
 
-<script>
-  const API = "/api/headlines?limit=50&reddit=1";
+  <script>
+    // ✅ Same-origin API URL prevents old pathing/domain issues forever.
+    const API = new URL("/api/headlines?limit=60&reddit=1", window.location.origin).toString();
 
-  // 60–120 seconds feels good on an Edge panel
-  let ROTATE_MS = 90_000;
+    const ROTATE_MS = 90_000;   // 1.5 minutes
+    const REFRESH_MS = 5 * 60_000; // refresh list every 5 minutes
 
-  let items = [];
-  let idx = 0;
-  let timer = null;
+    let items = [];
+    let idx = 0;
+    let lastFetch = 0;
 
-  const el = (id) => document.getElementById(id);
+    const $ = (id) => document.getElementById(id);
 
-  function tickClock(){
-    const d = new Date();
-    const h = d.getHours();
-    const m = String(d.getMinutes()).padStart(2,"0");
-    const ampm = h >= 12 ? "PM" : "AM";
-    const hh = ((h + 11) % 12 + 1);
-    el("clock").textContent = `${hh}:${m} ${ampm}`;
-  }
-
-  function setUpdatedLabel(text){
-    el("updated").textContent = text;
-  }
-
-  function showItem(i){
-    if (!items.length) return;
-
-    const x = items[i % items.length];
-    idx = i % items.length;
-
-    el("chip").textContent = (x.category || "NEWS").toUpperCase();
-    el("meta").textContent = x.source ? `${x.source}` : "—";
-    el("title").textContent = x.title || "—";
-    el("summary").textContent = x.summary || "Summary unavailable.";
-    el("sourcePill").innerHTML = `Source: <a href="${x.url}" target="_blank" rel="noreferrer">${escapeHtml(x.url)}</a>`;
-    el("idxPill").textContent = `Item ${idx + 1} / ${items.length}`;
-
-    // store current URL for Open button
-    el("openBtn").dataset.url = x.url || "";
-  }
-
-  function next(){
-    showItem(idx + 1);
-  }
-
-  function prev(){
-    showItem((idx - 1 + items.length) % items.length);
-  }
-
-  function startRotate(){
-    stopRotate();
-    el("autoPill").textContent = Math.round(ROTATE_MS/1000) + "s";
-    timer = setInterval(next, ROTATE_MS);
-  }
-
-  function stopRotate(){
-    if (timer) clearInterval(timer);
-    timer = null;
-  }
-
-  async function load(){
-    setUpdatedLabel("Updating…");
-    try{
-      const r = await fetch(API, { cache: "no-store" });
-      const data = await r.json();
-
-      if (!data.ok) throw new Error(data.error || "API error");
-
-      items = data.items || [];
-      if (!items.length) throw new Error("No items returned");
-
-      // randomize slightly so you don’t always see the same first headline
-      idx = Math.floor(Math.random() * items.length);
-      showItem(idx);
-
-      const now = new Date();
-      setUpdatedLabel("Updated " + now.toLocaleTimeString([], {hour:"numeric", minute:"2-digit"}));
-      startRotate();
-    }catch(e){
-      el("chip").textContent = "ERROR";
-      el("title").textContent = "Couldn’t load headlines";
-      el("summary").innerHTML = `<span class="err">${escapeHtml(String(e.message || e))}</span>`;
-      setUpdatedLabel("Error");
-      stopRotate();
+    function fmtTime(d){
+      const h = d.getHours();
+      const m = String(d.getMinutes()).padStart(2,"0");
+      const h12 = ((h + 11) % 12) + 1;
+      const ampm = h >= 12 ? "PM" : "AM";
+      return `${h12}:${m} ${ampm}`;
     }
-  }
 
-  function escapeHtml(s){
-    return String(s)
-      .replaceAll("&","&amp;")
-      .replaceAll("<","&lt;")
-      .replaceAll(">","&gt;")
-      .replaceAll('"',"&quot;")
-      .replaceAll("'","&#39;");
-  }
+    function tickClock(){
+      $("time").textContent = fmtTime(new Date());
+    }
 
-  // Controls
-  el("nextBtn").addEventListener("click", () => { next(); startRotate(); });
-  el("prevBtn").addEventListener("click", () => { prev(); startRotate(); });
-  el("openBtn").addEventListener("click", () => {
-    const u = el("openBtn").dataset.url;
-    if (u) window.open(u, "_blank", "noopener,noreferrer");
-  });
+    async function fetchHeadlines(){
+      const t0 = performance.now();
+      $("statusLeft").textContent = "Updating feeds…";
 
-  // Boot
-  tickClock();
-  setInterval(tickClock, 1000);
-  load();
-  // Refresh the feed list every ~10 minutes (without redeploying)
-  setInterval(load, 10 * 60 * 1000);
-</script>
+      let res, text;
+      try {
+        res = await fetch(API, { cache: "no-store" });
+        text = await res.text();
+      } catch (err) {
+        showError(`Network error: ${err?.message || err}`);
+        return;
+      }
+
+      // If it’s HTML, show a helpful error instead of JSON.parse exploding.
+      const looksLikeHTML = /^\s*</.test(text) && /<!doctype|<html/i.test(text);
+      if (looksLikeHTML) {
+        showError(`API returned HTML (wrong route). Status ${res.status}. First line: ${text.split("\n")[0].slice(0,120)}`);
+        return;
+      }
+
+      let data;
+      try {
+        data = JSON.parse(text);
+      } catch (e) {
+        showError(`Invalid JSON. Status ${res.status}. First 120 chars: ${text.slice(0,120)}`);
+        return;
+      }
+
+      if (!res.ok || !data?.ok) {
+        showError(`API error. Status ${res.status}. ${data?.error || "Unknown error"}`);
+        return;
+      }
+
+      items = Array.isArray(data.items) ? data.items : [];
+      lastFetch = Date.now();
+
+      const ms = Math.round(performance.now() - t0);
+      $("statusLeft").textContent = `Loaded ${items.length} items • ${ms}ms`;
+      $("statusRight").textContent = `Source: /api/headlines`;
+
+      if (items.length) {
+        idx = idx % items.length;
+        render(items[idx]);
+      } else {
+        showError("No items returned (feeds may be blocking or empty).");
+      }
+    }
+
+    function render(item){
+      $("tag").textContent = item.tag || "NEWS";
+      $("src").textContent = item.source || "—";
+      $("headline").textContent = item.title || "—";
+
+      // Option 3: no AI summary. Just show the URL host as “context”.
+      try {
+        const u = new URL(item.url);
+        $("summary").textContent = `Read: ${u.hostname}`;
+      } catch {
+        $("summary").textContent = "Read: —";
+      }
+
+      $("statusRight").innerHTML = item.url
+        ? `<a href="${item.url}" target="_blank" rel="noopener">Open</a>`
+        : `—`;
+    }
+
+    function showError(msg){
+      $("tag").textContent = "ERROR";
+      $("src").textContent = "—";
+      $("headline").textContent = "Couldn't load headlines";
+      $("summary").innerHTML = `<span class="errorLine">${escapeHtml(msg)}</span>`;
+      $("statusLeft").textContent = "Check /api/headlines route + Functions deploy";
+      $("statusRight").textContent = "—";
+    }
+
+    function escapeHtml(s){
+      return String(s || "")
+        .replaceAll("&","&amp;")
+        .replaceAll("<","&lt;")
+        .replaceAll(">","&gt;")
+        .replaceAll('"',"&quot;")
+        .replaceAll("'","&#039;");
+    }
+
+    function rotate(){
+      if (!items.length) return;
+      idx = (idx + 1) % items.length;
+      render(items[idx]);
+    }
+
+    // Clock
+    tickClock();
+    setInterval(tickClock, 1000);
+
+    // Rotation
+    setInterval(rotate, ROTATE_MS);
+
+    // Refresh loop (keeps things fresh)
+    setInterval(() => {
+      if (Date.now() - lastFetch > REFRESH_MS - 5_000) fetchHeadlines();
+    }, 30_000);
+
+    // Initial load
+    fetchHeadlines();
+  </script>
 </body>
 </html>
